force-app/main/default/objects/File_Upload_Event__e/File_Upload_Event__e.object-meta.xml
<CustomObject>
    <label>File_Upload_Event</label>
    <pluralLabel>File_Upload_Event</pluralLabel>
</CustomObject>