force-app/main/default/objects/File_Upload_Event__e/fields/File_Version_IDs__c.field-meta.xml
<CustomField>
    <fullName>File_Version_IDs__c</fullName>
    <label>File_Version_IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>