force-app/main/default/objects/File_Upload_Event__e/fields/Number_Of_Files__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Files__c</fullName>
    <label>Number_Of_Files</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>