force-app/main/default/objects/File_Upload_Event__e/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <label>Record_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>