force-app/main/default/objects/File_Upload_Event__e/fields/Upload_Source__c.field-meta.xml
<CustomField>
    <fullName>Upload_Source__c</fullName>
    <label>Upload_Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>